--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.10.14",
     "nodemon": "^2.0.6",
     "path": "^0.12.7",
+    "prettier": "^2.1.2",
     "rotating-file-stream": "^2.1.3"
   }
 }
