--- a/package.json
+++ b/package.json
@@ -13,10 +13,19 @@
   "author": "droidx",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.1",
     "fs": "0.0.1-security",
     "mongoose": "^5.10.14",
+    "node-sass-middleware": "^0.11.0",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "prettier": "^2.1.2",
     "rotating-file-stream": "^2.1.3"
