--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-sass-middleware": "^0.11.0",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "prettier": "^2.1.2",
