--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.14",
+    "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
