--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "droidx",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
